# baby-steps-to-building-a-realtime-chart-with-haskell

./: README.md  baby-steps-to-building-a-chart-with-diagrams.cabal  baby-steps-to-building-a-realtime-chart-with-haskell.cabal  stack.yaml
app/: .gitignore  Axis.hs  AxisCairo.hs  AxisGloss.hs  BulkVerticesData.hs  Chart.hs  ChartCairo.hs  ChartCairoWithUnboxedVector.hs  ChartGloss.hs  ChartOpenGL.hs  GLException.hs  GLFWStuff.hs  MyData.hs  MyDataUnboxedVector.hs  OpenGLStuff.hs  PriceChart.hs  PriceChartOwnScale.hs  PriceGraph.hs  PriceGraphCairo.hs  PriceGraphCairoWithUnboxedVector.hs  PriceGraphGloss.hs  PriceGraphOpenGL.hs  Scale.hs  ScaleCairo.hs  ScaleDataUnboxedVector.hs  ScaleUnboxedVector.hs  ScaleV2.hs  Step001AddDot.lhs  Step002AddColouredDot.lhs  Step003AddDotAtXY.lhs  Step004AddBoundingFrame.lhs  Step005AddDotAtXYWithBoundingFrame.lhs  Step006AddMultipleDotsAtXYsWithBoundingFrame.lhs  Step007BuildDotsFromDataSeries.lhs  Step008DrawPathAndDots.lhs  Step009AddAxis.lhs  Step010UnderstandingTranslate.lhs  Step011MultipleVariables.lhs  Step012Area.lhs  Step014MultipleVariablesUsingScaleModule.hs  (+26 more)
app/learn-opengl/: .gitignore  Makefile  Utils.c  Utils.h  chapter.1.c  chapter.2.3.c  chapter.2.4.c  chapter.2.c  chapter.3.2.c  chapter.3.c  chapter.4.c  config.mk  mimic_haskell_program.c  step_01_color_green.c  step_02_x_y_vertices.c  step_03_performance_test.c  use_gl_polygon.c  using_color_uniform.c  vertices.h
