name:                baby-steps-to-building-a-chart-with-diagrams
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/baby-steps-to-building-a-chart-with-diagrams#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable baby-steps-to-building-a-chart-with-diagrams-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-chart-with-diagrams
  default-language:    Haskell2010

executable Step001AddDot
  hs-source-dirs:      app
  main-is:             Step001AddDot.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-chart-with-diagrams
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step002AddColouredDot
  hs-source-dirs:      app
  main-is:             Step002AddColouredDot.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-chart-with-diagrams
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step003AddDotAtXY
  hs-source-dirs:      app
  main-is:             Step003AddDotAtXY.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-chart-with-diagrams
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step004AddBoundingFrame
  hs-source-dirs:      app
  main-is:             Step004AddBoundingFrame.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-chart-with-diagrams
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step005AddDotAtXYWithBoundingFrame
  hs-source-dirs:      app
  main-is:             Step005AddDotAtXYWithBoundingFrame.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-chart-with-diagrams
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

test-suite baby-steps-to-building-a-chart-with-diagrams-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , baby-steps-to-building-a-chart-with-diagrams
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/baby-steps-to-building-a-chart-with-diagrams
