name:                baby-steps-to-building-a-realtime-chart-with-haskell
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/baby-steps-to-building-a-realtime-chart-with-haskell#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

-- executable baby-steps-to-building-a-realtime-chart-with-haskell-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                      , baby-steps-to-building-a-realtime-chart-with-haskell
--   default-language:    Haskell2010

executable Step001AddDot
  hs-source-dirs:      app
  main-is:             Step001AddDot.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step002AddColouredDot
  hs-source-dirs:      app
  main-is:             Step002AddColouredDot.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step003AddDotAtXY
  hs-source-dirs:      app
  main-is:             Step003AddDotAtXY.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step004AddBoundingFrame
  hs-source-dirs:      app
  main-is:             Step004AddBoundingFrame.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step005AddDotAtXYWithBoundingFrame
  hs-source-dirs:      app
  main-is:             Step005AddDotAtXYWithBoundingFrame.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step006AddMultipleDotsAtXYsWithBoundingFrame
  hs-source-dirs:      app
  main-is:             Step006AddMultipleDotsAtXYsWithBoundingFrame.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step007BuildDotsFromDataSeries
  hs-source-dirs:      app
  main-is:             Step007BuildDotsFromDataSeries.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step008DrawPathAndDots
  hs-source-dirs:      app
  main-is:             Step008DrawPathAndDots.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step009AddAxis
  hs-source-dirs:      app
  main-is:             Step009AddAxis.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step010UnderstandingTranslate
  hs-source-dirs:      app
  main-is:             Step010UnderstandingTranslate.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step011MultipleVariables
  hs-source-dirs:      app
  main-is:             Step011MultipleVariables.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step012Area
  hs-source-dirs:      app
  main-is:             Step012Area.lhs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step014MultipleVariablesUsingScaleModule
  hs-source-dirs:      app
  main-is:             Step014MultipleVariablesUsingScaleModule.hs
  other-modules:       Scale
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step015MoreLocationIndependent
  hs-source-dirs:      app
  main-is:             Step015MoreLocationIndependent.hs
  other-modules:       Scale
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step016MultipleCharts
  hs-source-dirs:      app
  main-is:             Step016MultipleCharts.hs
  other-modules:       Scale
                     , PriceChartOwnScale
                     , VolumeChartOwnScale
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step017MultipleScaledCharts
  hs-source-dirs:      app
  main-is:             Step017MultipleScaledCharts.hs
  other-modules:       Scale
                     , PriceChart
                     , VolumeChart
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step018Axis
  hs-source-dirs:      app
  main-is:             Step018Axis.hs
  other-modules:       Scale
                     , PriceChart
                     , VolumeChart
                     , Axis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step019UsingAxis
  hs-source-dirs:      app
  main-is:             Step019UsingAxis.hs
  other-modules:       Scale
                     , PriceGraph
                     , VolumeGraph
                     , Axis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step020RenderUsingCairo
  hs-source-dirs:      app
  main-is:             Step020RenderUsingCairo.hs
  other-modules:       Scale
                     , PriceGraph
                     , VolumeGraph
                     , Axis
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
                     , async
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step021RenderDynamicallyUsingCairo
  hs-source-dirs:      app
  main-is:             Step021RenderDynamicallyUsingCairo.hs
  other-modules:       Scale
                     , PriceGraph
                     , VolumeGraph
                     , Axis
                     , Chart
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
                     , async
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step022RenderDynamicallyUsingCairoAndIORef
  hs-source-dirs:      app
  main-is:             Step022RenderDynamicallyUsingCairoAndIORef.hs
  other-modules:       Scale
                     , PriceGraph
                     , VolumeGraph
                     , Axis
                     , Chart
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
                     , async
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step023RenderDynamicallyUsingCairoIORefAndIntMap
  hs-source-dirs:      app
  main-is:             Step023RenderDynamicallyUsingCairoIORefAndIntMap.hs
  other-modules:       Scale
                     , PriceGraph
                     , VolumeGraph
                     , Axis
                     , Chart
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
                     , async
                     , containers
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step024CairoOnly
  hs-source-dirs:      app
  main-is:             Step024CairoOnly.hs
  other-modules:       ScaleV2
                     , PriceGraphCairo
                     , VolumeGraphCairo
                     , AxisCairo
                     , ChartCairo
                     , Types
                     , MyData
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
                     , async
                     , containers
                     , random
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step025Gloss
  hs-source-dirs:      app
  main-is:             Step025Gloss.hs
  other-modules:       ScaleV2
                     , PriceGraphGloss
                     , VolumeGraphGloss
                     , AxisGloss
                     , ChartGloss
                     , TypesGloss
                     , MyData
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , gtk
                     , groom
                     , cairo
                     , safe
                     , diagrams
                     , diagrams-cairo
                     , diagrams-lib
                     , diagrams-svg
                     , diagrams-core
                     , SVGFonts
                     , mtl
                     , linear
                     , colour
                     , async
                     , containers
                     , gloss
                     , gloss-raster
                     , random
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

executable Step026OpenGL
  hs-source-dirs:      app
  main-is:             Step026OpenGL.hs
  other-modules:       ScaleV2
                     , PriceGraphGloss
                     , VolumeGraphGloss
                     , AxisGloss
                     , ChartGloss
                     , TypesGloss
                     , MyData
                     , GLException
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , baby-steps-to-building-a-realtime-chart-with-haskell
                     , groom
                     , safe
                     , mtl
                     , linear
                     , colour
                     , async
                     , containers
                     , random
                     , vector
                     , bytestring
                     , gl
                     , safe-exceptions
                     , GLFW-b
                     , quine
  default-language:    Haskell2010
  other-extensions:    DeriveDataTypeable
                     , FlexibleContexts
                     , TemplateHaskell
                     , UndecidableInstances
                     , OverloadedStrings

-- test-suite baby-steps-to-building-a-realtime-chart-with-haskell-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , baby-steps-to-building-a-realtime-chart-with-haskell
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/baby-steps-to-building-a-realtime-chart-with-haskell
